CHANGELOG

2.6.5 - 2015-11-03
  * FIX: hierarchical toggle refine + new query with no result led to throw

2.6.4 - 2015-11-02
  * FIX: setPage 0 when toggling hierarchical refinements (consistency)

2.6.3 - 2015-10-19
  * FIX: add new geo search parameters

2.6.2 - 2015-10-16
  * CHORE : removes console.dir in code

2.6.1 - 2015-10-15
  * FEATURE : auto magic toggleRefinement on SearchParameters

2.6.0 - 2015-10-15
  * FEATURE : new function to get a query string from any state
  * FEATURE : filter on a state to get only part of the search parameters
  * FIX : Fix isNumericRefined and removeNumericFilters
  * CHORE : expose url related functions in a dedicated module
  algoliasearchHelper.urlTools

2.5.1 - 2015-10-12
  * FIX: the AlgoliaSearchHelper.getFacetsStats was not returning the stats
  if the attribute was both a regular & disjunctive facet.

2.5.0 - 2015-10-09
  * CHORE : Update qs to 5.2.0
  * FEATURE : getStateAsQueryString now orders the serialized parameters
  * FIX : IE8 has no array indexof


2.4.0 - 2015-09-23
  * FEATURE : add AlgoliaSearchHelper.getState(filters) to get a filtered state
  * FEATURE : add AlgoliaSearchHelper.getStateAsQueryString to get a part of
  the state as a queryString
  * FEATURE : add AlgoliaSearchHelper.setStateFromQueryString to set the state
  of the helper with a query string
  * FEATURE : add AlgoliaSearchHelper.getConfigurationFromQueryString. Reads
  a query string and returns the associated partial helper configuration
  * FEATURE : add AlgoliaSearchHelper.getForeignConfigurationInQueryString to
  get the configuration contained in a qs that is not from the helper
  * FIX : all the properties that are supposed to be numbers are now parsed in
  the SearchParameters

2.3.6 - 2015-09-17
  * CHORE: technical release, move all deps to ^version and add a shrinkwrap to allow reproducible builds

2.3.5 - 2015-09-12
  * FIX: getFacetStats should look into facets and disjunctiveFacets

2.3.4 - 2015-09-11