@@ -11,7 +11,7 @@ test('setqueryparameter should update existing parameter', function(t) {
   var newValue = [];
   var newsp = sp.setQueryParameter('facets', newValue);
 
-  t.equal(newsp.facets, newValue, 'update of an existing parameter');
+  t.deepEquals(newsp.facets, newValue, 'update of an existing parameter');
 
   t.end();
 });
@@ -24,7 +24,7 @@ test('setqueryparameter should add non-existing parameter', function(t) {
   var newValue = ['attributesToHighlight'];
   var newsp = sp.setQueryParameter('attributesToHighlight', newValue);
 
-  t.equal(newsp.attributesToHighlight, newValue, 'add new parameter');
+  t.deepEquals(newsp.attributesToHighlight, newValue, 'add new parameter');
 
   t.end();
 });
@@ -38,7 +38,7 @@ test('setQueryParameter should not create a new instance if the update is non ef
   var newValue = 10;
   var newsp = sp.setQueryParameter('maxValuesPerFacet', newValue);
 
-  t.equal(newsp, sp, 'No change should result in the same instance');
+  t.deepEquals(newsp, sp, 'No change should result in the same instance');
 
   t.end();
 });
